# micro-service-arxitekturasi

./: .env.example  .gitignore  DEPLOY_4_SERVERS.md  Dockerfile  KOD_TAHLILI.md  README.md  UBUNTU_QOLLANMA.md  circuit_breaker_test.py  demo_monitoring.py  demo_output.txt  demo_results.txt  docker-compose.yml  full_demo.py  live_test.py  load_test.py  pyproject.toml  stress_test.py  test_load.py
load_balancer/: __init__.py  algorithms.py  circuit_breaker.py  health_check.py  main.py  settings.py
service_1/: main.py
service_2/: main.py
service_3/: main.py
