[tool.poetry]
name = "microservice-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.129.0"
httpx = "^0.28.1"
uvicorn = "^0.41.0"
pydantic-settings = "^2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
