[tool.poetry]
name = "microservice-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.129.0"
httpx = "^0.28.1"
uvicorn = "^0.41.0"
pydantic-settings = "^2.13.1"
load-balancer = "^0.1.1"
aiohttp = "^3.13.3"
matplotlib = "^3.10.8"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
